# assuo

./: Cargo.toml  README.md  assuo.toml
.github/workflows/: commit.yml  release.yml
assuo/: Cargo.toml
assuo-cli/: Cargo.toml
assuo-cli/src/: main.rs
assuo-cli/tests/: cli.rs
assuo/src/: lib.rs  models.rs  patch.rs
assuo/tests/: algo.rs  web.rs
src/: main.rs  models.rs
tests/: cli.rs
