[package]
name = "assuo"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde = { version = "1.0.117", features = ["derive"] }
paw = "1.0.0"
atty = "0.2.14"
