[package]
name = "assuo-cli"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

# since the lib's name is assuo and the bin's name is assuo-cli,
# we do this to rename assuo-cli.exe to assuo
[[bin]]
name = "assuo"
path = "./src/main.rs"

[dependencies]
assuo = { path = "../assuo" }
paw = "1.0.0"

# just enough of tokio for http stuff
[dependencies.tokio]
version = "^0.2"
default-features = false
features = ["rt-core"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
