[package]
name = "assuo"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

[dependencies]
toml = "0.5.7"
serde = { version = "1.0.117", features = ["derive"] }
async-trait = "0.1.41"
reqwest = "0.10.8"

[dev-dependencies]
httptest = "0.13.2"
tokio = { version = "^0.2", features = ["rt-threaded", "macros"] }
rand = "0.7.3"
